# longecho

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/longecho/: __init__.py  audio_generator.py  file_watcher.py  main.py  text_normalizer.py  text_segmenter.py  voice_event_broadcaster.py  voice_manager.py
src/longecho/_vendor/echo_tts/: LICENSE  __init__.py  autoencoder.py  inference.py  inference_blockwise.py  model.py
static/: LICENSE-lamejs  app.js  index.html  style.css
tests/: conftest.py  test_audio_generator.py  test_continuation_boundary.py  test_file_watcher.py  test_main.py  test_text_normalizer.py  test_text_segmenter.py  test_voice_event_broadcaster.py  test_voice_manager.py
