[project]
name = "longecho"
version = "0.1.0"
description = "Long-form audio generation with Echo-TTS using text chunking and streaming"
authors = [
    {name = "LongEcho Contributors"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "watchdog>=4.0.0",
    # Echo-TTS vendored dependencies
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "numpy",
    "tqdm>=4.66.0",
    "einops>=0.8.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.24.0",
    "torchcodec>=0.8.1",
]

# Note: On Windows, torchcodec requires FFmpeg shared DLLs in PATH
# See README for installation instructions

[tool.uv]
# Configure PyTorch CUDA 12.8 index
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# Get torch/torchaudio from CUDA 12.8 index, torchcodec from PyPI
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/longecho"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
pythonpath = ["src"]
